* MiniDump inclusion decision moved from settings to the crash report
* Better SubSystem descriptions
* Added Ben.Demystifier for better exceptions
* Added DynamicAPI implementation
* Debug.Print is handled as Debug level now instead of Information
* Limited default log file size per day to 5MB, max 7 files; others to 3MB, max 5 files
* Limited logs in Crash Report to 2000 lines
---------------------------------------------------------------------------------------------------
Version: 2.5.1
Game Versions: v1.0.0,v1.0.1
* Fixed DelayedSubModuleManager check
---------------------------------------------------------------------------------------------------
Version: 2.5.0
Game Versions: v1.0.0,v1.0.1
* Extended DelayedSubModuleManager with a non generic variant
---------------------------------------------------------------------------------------------------
Version: 2.4.1
Game Versions: v1.0.0
* Removed unnecessary collision for HotKeys
* Better explanation of why a crash report failed to upload
---------------------------------------------------------------------------------------------------
Version: 2.4.0
Game Versions: v1.0.0
* HotKey system overhaul
---------------------------------------------------------------------------------------------------
Version: 2.3.6
Game Versions: v1.0.0
* Disabled "Catch Native->Managed Code Exceptions", seems to be causing issues for some players
---------------------------------------------------------------------------------------------------
Version: 2.3.5
Game Versions: v1.0.0
* Fixed CTD when failing to serialize ButterLib's settings
---------------------------------------------------------------------------------------------------
Version: 2.3.4
Game Versions: v1.0.0
* Another potential CTD fix
---------------------------------------------------------------------------------------------------
Version: 2.3.3
Game Versions: v1.0.0
* Added "Catch Native->Managed Code Exceptions"
* Fixed path being incorrect