@@ -13,8 +13,8 @@
     <!--Serilog depends on abstraction 2.0.0, and since we can't do app redirects, we're stuck with that-->
     <ExtensionVersion>2.0.0</ExtensionVersion>
     <!--BuildResources Version-->
-    <BuildResourcesVersion>1.0.1.85</BuildResourcesVersion>
-    <BUTRSharedVersion>3.0.0.123</BUTRSharedVersion>
+    <BuildResourcesVersion>1.0.1.86</BuildResourcesVersion>
+    <BUTRSharedVersion>3.0.0.124</BUTRSharedVersion>
     <BUTRModuleManagerVersion>4.0.150</BUTRModuleManagerVersion>
   </PropertyGroup>
 
